style.css
/* ... */
.browser .header {
  background: #E8E8E8;
  border-radius: 4px 4px 0 0;
  padding-bottom: 3px;
}

.browser .header .title {
  background: #fff;
  display: inline-block;
  width: 320px;
  border-radius: 4px;
  padding: 6px 14px 4px;
  margin-left: 10px;
  vertical-align: middle;
}

.browser .header .title .scheme {
  color: #7ED321;
}

.browser .body {
  padding: 16px;
  font: 11px "Lucida Grande", "Open Sans";
}

.browser .tweets {
  margin: 0;
  height: 150px;
  overflow-y: auto;
}

.browser .tweets li {
  height: 27px;
  line-height: 27px;
  vertical-align: middle;
  color: #4B434D;
  list-style-type: none;
  margin-bottom: 14px;
}

.browser .tweets img {
  width: 27px;
  height: 27px;
  border-radius: 100%;
  float: left;
  margin-right: 10px;
}

.browser .tweets .tweet {
  max-width: 300px;
  overflow: hidden;
  display: inline-block;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.browser .tweets .time {
  color: #9B9B9B;
  float: right;
}

.browser .tweets .new {
  -webkit-animation: drop 500ms;
}

@-webkit-keyframes zoom {
  0%   { opacity: 0; -webkit-transform: scale(1.15); }
  100% { opacity: 1; -webkit-transform: scale(1); }
}

@-webkit-keyframes drop {
  0%   { opacity: 0; -webkit-transform: translateY(-20px); }
  100% { opacity: 1; -webkit-transform: translateY(0px); }
}

@media screen and (max-width: 950px) {
  .home .information-entry {
    height: 200px !important;
  }

  .home .example-entry {
    height: 200px !important;
    margin-bottom: 100px;
  }
}

@media screen and (max-width: 900px) {
  header {
    margin-bottom: 120px;
  }

  div#page .entry-title {
    font-size: 24px !important;
  }

  .home #screen-fill {
    display: none;
  }

  .home header.fading {
    opacity: 1.0 !important;
  }

  .home .left {
    float: none;
  }

  .home .right {
    float: none;
  }

  .home .information-column {
    width: 100%;
    margin-left: 0px !important;
    margin-right: 0px !important;
  }

  .home .example-column {
    width: 100%;
    margin-left: 0px !important;
    margin-right: 0px !important;
  }


  .home #entries {
    margin-left: 0%;
    margin-top: 150px;
  }

  .home .example-entry {
    height: 190px;
    text-align: center;
  }

  .home .information-entry {
    height: 170px;
    text-align: center;
  }

  .home .icon:before {
    margin-left: -30px !important;
    margin-top: -70px !important;
    font-size: 50px !important;
  }

  .site-footer {
    text-align: center;
    padding-bottom: 40px;
    font-size: 8px;
  }

  .site-footer .footer-left {
    float: none !important;
  }

  .site-footer .footer-right {
    float: none !important;
  }

  .footer-right #a8c-image {
    float: none !important;
    display: inline-block !important;
    vertical-align: middle !important;
  }

  .site-info span {
    display: block;
  }
  
  .main-navigation {
    float: none !important;
    display: inline-block;
    text-align: center;
  }

  .main-navigation #logo-container {
    float: none !important;
    display: block;
  }

  .main-navigation #logo {
    float: none !important;
    
    position: absolute;
    top: 80px;
    left: 0px;
    right: 0px;

    margin-left: auto;
    margin-right: auto;
  }

  .main-navigation ul.menu {
    width: 100%;
    float: none !important;
    position: absolute;
    display: inline-block;
    text-align: center;
    left: 0px;
    right: 0px;
    top: 10px;

    margin-left: auto;
    margin-right: auto;
  }

  .main-navigation ul.menu li {
    float: none !important;
    display: inline-block;
    margin-left: 5px;
    margin-right: 5px;
  }
}

/* Home icons */
.home .icon:before {
  font-family: 'untitled-font-2';
  position: absolute;
  margin-left: -100px;
  font-size: 70px;
}

.home .analytics:before {
  content: "y";
}

.home .binary:before {
  content: "G";
}

.home .chat:before {
  content: "M";
}

.home .collab:before {
  content: "J";
}

/* Footer stuff */
.site-footer {
  font-size: 11px;
  margin: 20px;
  height: 20px;
}

.size-footer .footer-left {
  float: left;
  line-height: 20px;
}

.size-footer .footer-right {
  float: right;
  line-height: 20px;
}

.footer-right #a8c-image {
  float: right;
  margin-left: 5px;
  width: 20px;
  height: 20px;
  background-size: cover;
  background-image: url('http://cdn.socket.io/website/imgs/a8c.png');
}

#menu-item-43 {
  display: none;
}

@media screen and (min-width: 900px) {
  #menu-item-43 {
    display: block;
    float: right;
    padding: 0;
    margin: 15px 0 0 0;
  }
  
  #menu-item-43 a {
    display: inline-block;
    background: rgb(219, 122, 238);
    border: 0;
    padding: 4px 12px;
    vertical-align: middle;
    border-radius: 12px;
    color: #fff;
    font-size: 12px;
    font-weight: bold;
    color: #fff;
  }
}

/* Blog stuff */
body #primary {
  max-width: 800px;
  margin: auto;
}

body.home #primary {
  max-width: 1200px;
}

/* Codes */
pre, form {
  padding: 0.3em;
  padding-left: 0.8em;
  border-left: 0.5em solid #D8D8D8;
  background: white;
}

@media screen and (max-width: 900px) {
  form {
    width: 80%;
    margin-left: 20%;
  }
}

code {
  font-size: 11px;
  padding: 3px 5px;
  background: #eee;
  color: #666;
}

pre code {
  padding: 0 0;
  background: none;
}

pre code, form input {
  color: rgb(119, 119, 119);
  font-weight: lighter;
  font-size: 12px;
}

div.ezcol pre code {
  font-size: 10px;
}

form input {
  background: none !important;
  border: none !important;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance:    none;
  appearance:         none;
}

/* Sidebar sub-theme */
#sidebar {
  float: left;
  position: fixed;
  width: 170px;

  font-size: 12px;
}

#sidebar li {
  list-style-type: none;
  margin-top: 10px;
  margin-bottom: 10px;
  text-align: right;
}

#sidebar li#parent {
  color: #4A4A4A;
  font-weight: bold;
}

#sidebar li.anchor {
  border-color: rgba(155, 155, 155, .2275);
  border-style: solid;
  border-width: 1px 0 0 0; 
}

#sidebar li a {
  text-decoration: none;
  color: #9B9B9B;
}
/* ... */

